# portfolio

./: CMakeLists.txt  README.md  TODO  interfaces.hpp
.github/workflows/: release.yml
cmake/: PortfolioHelpers.cmake  PortfolioManagementConfig.cmake.in
include/: BasePortfolioStrategy.hpp  IDataSource.hpp  IPluginFactory.hpp  IPortfolioDatabase.hpp  IPortfolioManager.hpp  IPortfolioStrategy.hpp  IStrategyFactory.hpp  InflationAdjuster.hpp  PluginManager.hpp  Portfolio.hpp  PortfolioManager.hpp  RiskFreeRateCalculator.hpp  SQLiteDatabase.hpp  TaxCalculator.hpp  TradingCalendar.hpp  TradingContext.hpp
plugins/: CMakeLists.txt
plugins/database/: CMakeLists.txt
plugins/database/inmemory/: CMakeLists.txt  InMemoryDatabase.cpp  InMemoryDatabase.hpp  InMemoryDatabasePlugin.cpp
plugins/database/inmemory/tests/: CMakeLists.txt  test_inmemory_database.cpp
plugins/database/sqlite/: CMakeLists.txt  SQLiteDatabase.cpp  SQLiteDatabase.hpp  SQLiteDatabasePlugin.cpp
plugins/database/sqlite/tests/: CMakeLists.txt  test_sqlite_database.cpp
plugins/datasource/: CMakeLists.txt
plugins/datasource/csv/: CMakeLists.txt  CSVDataSource.cpp  CSVDataSource.hpp  CSVDataSourcePlugin.cpp
plugins/datasource/csv/tests/: CMakeLists.txt  test_csv_datasource.cpp  test_csv_datasource_plugin.cpp
plugins/strategy/: CMakeLists.txt
plugins/strategy/buyhold/: BuyHoldStrategy.cpp  BuyHoldStrategy.hpp  BuyHoldStrategyPlugin.cpp  CMakeLists.txt
plugins/strategy/buyhold/tests/: CMakeLists.txt  test_buyhold_strategy.cpp  test_buyhold_with_dividends.cpp
src/: BasePortfolioStrategy.cpp  BuyAndHoldStrategy.cpp  BuyAndHoldStrategy.hpp  BuyAndHoldStrategyPlugin.cpp  BuyAndHoldStrategyPlugin.hpp  CMakeLists.txt  CSVDataSource.cpp  CSVDataSource.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandLineParser.cpp  CommandLineParser.hpp  InMemoryDatabasePlugin.cpp  InMemoryDatabasePlugin.hpp  InflationAdjuster.cpp  PluginManager.cpp  Portfolio.cpp  PortfolioManager.cpp  RiskFreeRateCalculator.cpp  TaxCalculator.cpp  TradingCalendar.cpp  main.cpp
tests/: CMakeLists.txt  test_buyhold_strategy.cpp  test_command_line.cpp  test_csv_datasource.cpp  test_inflation_adjuster.cpp  test_inmemory_database.cpp  test_instrument_delete_filters.cpp  test_plugin_manager.cpp  test_portfolio.cpp  test_recharge_functionality.cpp  test_risk_free_rate_calculator.cpp  test_sqlite_database.cpp  test_strategy_FIXED.cpp  test_strategy_with_inmemory.cpp  test_tax_calculator.cpp  test_trading_calendar.cpp
